--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
                 <p> Hi.. I'm Sahan Sandeepa; from Sri Lanka & a student in SLTC Campus.
-                    I'm studying BACHELOR OF SCIENCE HONOURS  software engineering.
+                    I'm studying BACHELOR OF SCIENCE HONOURS Data Science.
                     Happy to be a dynamic IT professional, working in challenging 
                     environments that would enable myself to enhance and innate 
                     abilities in the corporate sector successfully, leading to 
