--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 </nav>
                 <div class="header-text"></div>
-            <p class="header-text-p">Software Engineer</p>
+            <p class="header-text-p">Data Science</p>
             <h1 class="header-text-h1">Hi, I'm <span class="header-text-spa">Sahan</span><br> sandeepa From Sri Lanka</h1>
         </div>
         </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="tab-contents" id="edducation">
                     <ul>
-                        <li><span>2022 - Present</span><br>BSc (Hons) in Software Engineering Sri Lanka Technological Campus/Padukka</li>
+                        <li><span>2022 - Present</span><br>BSc (Hons) in Data Science Sri Lanka Technological Campus/Padukka</li>
                         <li><span>2021</span><br>social media & Designing Diploma courese in SLTCA</li>
                         <li><span>2020 </span><br>IT DIPLOMA COURSE IN NANESALA</li>
                         <li><span>2017 - 2019</span><br>G.C.E Advanced Level Kannangara central College</li>
